[package]
name = "mqtt_to_influx_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = "4.1.1"
clap_derive = "4.1.0"
futures = "0.3.25"
influxdb = { version = "0.5.2", features = ["derive"] }
paho-mqtt = "0.12.0"
signal-hook = "0.3.14"
signal-hook-tokio = {version="0.3.1", features=["futures-v0_3"]}
tokio = { version = "1.24.1", features = ["macros", "full", ] }
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-glog = "0.2.2"
tracing-subscriber = {version = "0.3.16", features = ["env-filter",]}
